syntax = "proto3";

option go_package = "protogen/userpb;userpb";

package user;

service UserService {
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
}

message GetUsersRequest {}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    string phone = 4;
}

message GetUsersResponse {
    repeated User users = 1;
}